--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "webScrapper.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/webScrapper.js"
+    "dev": "nodemon ./src/orderByPrice.js"
   },
   "keywords": [],
   "author": "",
