--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "webscraper",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
-  "main": "webScrapper.js",
+  "main": "webScrapper.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/orderByPrice.js"
+    "dev": "nodemon ./src/orderByPrice.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^19.5.2"
+    "puppeteer": "^19.5.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@types/puppeteer": "^7.0.4",
