--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "main": "webScrapper.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/orderByPrice.ts"
+    "dev": "nodemon ./src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "puppeteer": "^19.5.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
     "@types/puppeteer": "^7.0.4",
     "nodemon": "^2.0.20"
   }
